# project-limbo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  codex-output.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: autonomous-claude.yml  autonomous-codex.yml  ci.yml
docs/: architecture.md  project-board.md  roadmap.md
examples/: basic.json  operators_csv.json  operators_jsonl.json
examples/data/: sales.csv  users.jsonl
src/limbo/: __init__.py  __main__.py  artifacts.py  cache.py  cli.py  engine.py  errors.py  expressions.py  fingerprint.py  graph.py  leases.py  observability.py  operators.py  policy.py  retry.py  spec.py
tests/: test_artifacts.py  test_cli.py  test_e2e.py  test_engine.py  test_expressions.py  test_fingerprint.py  test_graph.py  test_leases.py  test_observability.py  test_operators.py  test_packaging.py  test_policy.py  test_retry.py  test_spec.py
