[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-limbo"
version = "0.1.0"
description = "A local-first DAG runner for reproducible data and automation pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Project Limbo Maintainers"}
]
keywords = ["dag", "pipeline", "scheduler", "automation", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Distributed Computing"
]

[project.scripts]
limbo = "limbo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.limbo]
state_dir = ".limbo"
